# mutx-dev

./: .ansible-lint  .dockerignore  .env.example  .env.monitoring.example  .env.otel.example  .env.production.example  .gitattributes  .gitbook.yaml  .github.md  .gitignore  .pre-commit-config.yaml  .tmp-pr1183-body.md  04a59589-200f-4940-8a61-ced2d6a63103.json  04a59589-200f-4940-8a61-ced2d6a63103.srt  04a59589-200f-4940-8a61-ced2d6a63103.tsv  04a59589-200f-4940-8a61-ced2d6a63103.txt  04a59589-200f-4940-8a61-ced2d6a63103.vtt  3ba7d2a3-4892-4f42-966f-81abeaba2cb4.json  44923d4e-2f78-466d-9238-ca1b63cf0eae.json  44923d4e-2f78-466d-9238-ca1b63cf0eae.srt  44923d4e-2f78-466d-9238-ca1b63cf0eae.tsv  44923d4e-2f78-466d-9238-ca1b63cf0eae.txt  44923d4e-2f78-466d-9238-ca1b63cf0eae.vtt  49562522-8ccd-4aa3-8916-172498096c03.json  49562522-8ccd-4aa3-8916-172498096c03.srt  49562522-8ccd-4aa3-8916-172498096c03.tsv  49562522-8ccd-4aa3-8916-172498096c03.txt  49562522-8ccd-4aa3-8916-172498096c03.vtt  4ef22b45-cb58-432f-8701-c8d5f6183813.json  5905ce44-bf14-4156-8e18-962b765e56dc.json  5905ce44-bf14-4156-8e18-962b765e56dc.srt  5905ce44-bf14-4156-8e18-962b765e56dc.tsv  5905ce44-bf14-4156-8e18-962b765e56dc.vtt  61daae6f-4b7e-4c49-91ca-07cf36f5cfbb.json  61daae6f-4b7e-4c49-91ca-07cf36f5cfbb.srt  61daae6f-4b7e-4c49-91ca-07cf36f5cfbb.tsv  61daae6f-4b7e-4c49-91ca-07cf36f5cfbb.txt  61daae6f-4b7e-4c49-91ca-07cf36f5cfbb.vtt  77944dfb-846b-4cfc-be2c-bcf3dfeab989.json  77944dfb-846b-4cfc-be2c-bcf3dfeab989.srt  (+185 more)
.clawdhub/: lock.json
.gitbook/: tags.yaml
.github/: CODEOWNERS  README.md  pull_request_template.md
.openclaw/: signal-engine-cron.json  workspace-state.json
.playwright-cli/: page-2026-04-16T20-12-25-576Z.yml  page-2026-04-16T20-12-36-691Z.yml  page-2026-04-16T20-12-56-057Z.yml  page-2026-04-16T20-13-32-239Z.yml  page-2026-04-16T20-14-04-878Z.yml  page-2026-04-16T20-14-33-140Z.yml  page-2026-04-16T20-14-52-465Z.yml  page-2026-04-16T20-15-13-763Z.yml
.repo-links/: MUD
.tmp-whisper/: 162595de-17f6-4f7b-85a5-3a1a46362ed9.txt  1ef68b35-69ff-4f72-b8f7-b25f502d3ba5.txt  20d44d8d-3916-459b-8060-c7d48e080563.txt  2e3a2d36-7207-41ae-9f37-4fb300e70ff0.txt  f6f00499-61e7-43fa-90b5-b19cf327f0b5.txt
.transcripts/: 578c58d1-3bf8-4381-9ead-afc879cd916f.txt  c1af861b-6125-4851-a6d7-16a43faa163a.txt
MUTX RECOVERY PACKET/: 00_README_FIRST.md  01_EXECUTIVE_PLAN.md  02_IMPLEMENTATION_ROADMAP.md  03_MISSION_CONTROL_HARVEST_MAP.md  04_MULTI_AGENT_EXECUTION_PLAN.md  05_PR_HEALING_AND_SHIP_CHECKLISTS.md
agents/: README.md  registry.yml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  middleware.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
autonomy_stubs/: coverage_budgets.md  coverage_clawhub.md  coverage_deployments.md  coverage_governance_credentials.md  coverage_governance_supervision.md  error_agents.md  error_assistant.md  error_budgets.md  error_deployments.md  error_security.md  todo_app_types_apits_1768.md  todo_components_app_LogsMetricsStateClienttsx_111.md  todo_next_envdts_4.md  todo_scripts_autonomy_mutx_autonomous_daemonpy_143.md  todo_scripts_autonomy_mutx_gap_scanner_v3py_44.md  todo_sdk_mutx_schedulerpy_2.md  todo_sdk_mutx_schedulerpy_31.md  todo_src_api_routes_newsletterpy_30.md  todo_src_api_routes_ragpy_272.md  todo_src_security_compliancepy_477.md
cli/: __init__.py  config.py  desktop_bridge.py  errors.py  faramesh_runtime.py  local_control_plane.py  main.py  openclaw_runtime.py  operator_readiness.py  personal_assistant.py  runtime_registry.py  setup_wizard.py
components/: AgentNetwork.tsx  AnimatedTerminal.tsx  AuthNav.tsx  ContactLeadForm.tsx  Providers.tsx  TerminalWindow.tsx  WaitlistForm.module.css  WaitlistForm.tsx
contributing/: README.md
council/: mutx-prod-ready-audit-2026-04-01.md  perugia-picomutx-2026-04-01.md
desktop/: main.cjs  preload.js
docs/: CONTRACTS.md  MIGRATION_RUNBOOK.md  MONITORING.md  README.md  RELEASE.md  WEBHOOK-GOVERNANCE.md  agent-reach-mutx-playbook.md  app-dashboard.md  autonomous-dev-shop-v2.md  autonomy-legacy-quarantine.md  autonomy-operating-model.md  autonomy-runbook.md  changelog-status.md  claim-to-reality-gap-matrix.md  cli.md  clone-policy.md  document-workflows.md  governance.md  inbox-setup.md  index.md  infrastructure.md  mutx.dev Whitepaper.md  orchestra-research.md  otel.md  overview.md  phase-0-company-os-snapshot.md  phase-0-openclaw-config-partial.md  policy-guard-design.md  project-status.md  quickstart.md  repo-size-audit.md  roadmap.md  sdk.md  support.md  surface-matrix.md  surfaces.md  technical-whitepaper.md  ui-port-progress.md  upstream-dep-report.md  upstream-tracking.json  (+2 more)
examples/: autogen_agent.py  crewai_agent.py  langchain_agent.py
homebrew-tap/: README.md
i18n/: request.ts  routing.ts
infrastructure/: Makefile  README.md
lib/: calendly.ts  command.ts  dashboardFailureGuidance.ts  dashboardPanels.ts  db-compat.ts  db.ts  desktopRelease.ts  docs-sync.ts  docs.ts  docsLinks.ts  event-bus.ts  gnap-sync.ts  logger.ts  marketingContent.ts  navigation.ts  og-image.tsx  og.tsx  openclaw-gateway.ts  seo.ts  (+5 more)
sdk/: LICENSE  NOTICE  pyproject.toml
sdk/mutx/: __init__.py  _datetime.py  _url.py  agent_runtime.py  agents.py  analytics.py  api_keys.py  approvals.py  assistant.py  budgets.py  clawhub.py  deployments.py  governance.py  governance_credentials.py  governance_supervision.py  guardrails.py  ingest.py  leads.py  models.py  newsletter.py  observability.py  onboarding.py  policy.py  runtime.py  scheduler.py  security.py  sessions.py  swarms.py  telemetry.py  templates.py  usage.py  webhooks.py
sdk/mutx/adapters/: __init__.py  autogen.py  crewai.py  langchain.py
sdk/mutx/tests/: __init__.py  test_clawhub.py  test_deployments.py  test_governance_credentials.py  test_governance_supervision.py  test_ingest.py  test_onboarding.py  test_runtime.py
sdk/tests/adapters/: test_autogen.py  test_crewai.py  test_langchain.py
sdk/tests/unit/sdk/: test_sessions.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+2127 files in other folders)
