[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutx"
version = "1.2.0"
description = "Python SDK for mutx.dev"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "mutx.dev", email = "hello@mutx.dev"}
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mutx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
