[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mutx"
version = "1.3.0"
description = "Python SDK for mutx.dev"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "mutx.dev", email = "hello@mutx.dev"}
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
langchain = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]
crewai = [
    "crewai>=0.80.0",
    "crewai-tools>=0.10.0",
]
autogen = [
    "autogen>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mutx"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
