[package]
name = "mutx-app"
version = "0.1.0"
description = "MUTX macOS Native App"
authors = ["MUTX Team"]
edition = "2021"

[lib]
name = "mutx_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mutx-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
